--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+<h1>Help</h1>
+<p> Get help on the Ruby on Rails Tuturial at the
+	<a href="http://railstutorial.ru/chapters/4_0/beginning"> Rails Tutorial page help</a>
+	To get help on this sample app, see the
+	<a href="http://railstutorial.ru/4_0/help"> Rails Tutorial book </a>
+</p>
