--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
-	<h1>Sample App</h1>
-<p>This is the home page for the
-  <a href="https://git-scm.com/book/en/v2"> Git Book Home </a>
+<div class="center hero-unit">
+	<h1>Welcom to the Sample App</h1>
+<h2>This is the home page for the
+  <a  href="https://git-scm.com/book/en/v2"> Git Book Home </a>
  sample application.
-</p>
+</h2>
+<%= link_to "Sign up Now!", signup_path, class: "btn btn-large btn-primary" %> <!--Ссылка с заглушкой # -->
+</div>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'https://rubyonrails.org/' %>
