--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit">
-	<h1>Welcom to the Sample App</h1>
+	<h1>Welcom to Task manager</h1>
 <h2>This is the home page for the
   <a  href="https://git-scm.com/book/en/v2"> Git Book Home </a>
  sample application.
