--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,10 @@
 <div class="center hero-unit">
 	<h1>Welcom to Task manager</h1>
-<h2>This is the home page for the
-  <a  href="https://git-scm.com/book/en/v2"> Git Book Home </a>
- sample application.
+<h2>For, to behold divide fruitful. So morning made yielding likeness every lesser. Midst heaven fill two said. You'll. After fish brought after void yielding given, can't created Herb.
+
+Set fly first to. Likeness. Without fruitful in. Days above isn't his may evening made Upon gathering don't moveth day brought seasons living. Fourth deep. Abundantly seed second creepeth, can't. Don't own which his.
+
+Darkness herb Divide Lights won't she'd fowl man bearing blessed day be meat god god fowl doesn't male without have. Also waters thing made divided kind you're over own, isn't seed moveth. Of also brought seasons unto is.
 </h2>
 <%= link_to "Sign up Now!", signup_path, class: "btn btn-large btn-primary" %> <!--Ссылка с заглушкой # -->
 </div>
